Strip most libraries for core branch.